--- a/main.css
+++ b/main.css
@@ -176,105 +176,26 @@ a{
 }
 
 /*Featured*/
-.flex {
+.new-product-grid{
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center; 
-}
-  
-.flex > section {
+  justify-content: space-evenly;
   align-items: center;
-  display: flex;
-  flex: 1 1 0;
-  flex-direction: column;
+  flex-direction: row;
+}
+
+.product img{
+  width: 300px;
+  height: 100%;
+}
+
+.product-info{
   text-align: center;
-  max-width: 400px;
-}
-  
-.flex > section > p {
-  flex-grow: 1;
-}
-  
-.flex ul {
-  display: flex;
-  justify-content: space-between;
-}
-  
-.flex aside {
-  width: 100%;
 }
 
-.flex > section {
-  background: #fff;
-  padding: 1em;
-  margin: 0.5em;
-  border-radius: 4px;
+.product-info p:nth-child(1){
+  font-weight:bolder;
+  color: #919191;
 }
-
-.flex ul {
-  list-style-type: none;
-  padding: 0;
-}
-  
-.flex li {
-  background: #eee;
-  font-weight: 700;
-  padding: 0.3em 0.6em;
-  border-radius: 1em;
-}
-
-.flex img {
-  width: 250px;
-  border-radius: 2px;
-}
-
-.flex {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center; 
-  }
-    
-  .flex > section {
-    align-items: center;
-    display: flex;
-    flex: 1 1 0;
-    flex-direction: column;
-    text-align: center;
-    max-width: 400px;
-  }
-    
-  .flex > section > p {
-    flex-grow: 1;
-  }
-        
-  .flex ul {
-    display: flex;
-    justify-content: space-between;
-  }
-    
-  .flex aside {
-    width: 100%;
-  }
-  
-  .flex > section {
-    background: #fff;
-    padding: 1em;
-    margin: 0.5em;
-    border-radius: 4px;
-  }
-  
-  .flex ul {
-    list-style-type: none;
-    padding: 0;
-  }
-    
-  .flex li {
-    background: #eee;
-    font-weight: 700;
-    padding: 0.3em 0.6em;
-    border-radius: 1em;
-  }
-  
   
 .btn3{
     background-color: transparent;
