--- a/main.css
+++ b/main.css
@@ -264,15 +264,10 @@ a{
 }
 
 /*Category Grid*/
-.column-grid1{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-    
-  gap: 20px;
-
-  margin-bottom: 40px;
+.category-grid{
+  display: grid;
+  grid-template-columns: repeat(3, 3fr);
+  place-items: center;
 }
 
 .cat-item img{
@@ -283,15 +278,11 @@ a{
   color: black;
   text-decoration: none;
 }
+
 .cat-item a:hover{
   color: rgb(43, 43, 43);
 }
 
-/* @media (max-width: 1200px) {
-    .cat-item img{
-        width: 1600px;
-    }
-} */
 /*Banners*/
 .sales-banner{
     background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),url("/Assets/Images/sidekix-mediac-unsplash.jpg");
