update main.css - changed size of category grid

--- a/main.css
+++ b/main.css
@@ -266,12 +266,15 @@ a{
 /*Category Grid*/
 .category-grid{
   display: grid;
-  grid-template-columns: repeat(3, 3fr);
+  grid-template-columns: repeat(3, 1fr);
   place-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-.cat-item img{
-  width: 300px;
+.cat-item img {
+  width: 100%;
+  height: auto; 
 }
 
 .cat-item a{
