--- a/main.css
+++ b/main.css
@@ -48,6 +48,10 @@ a{
     text-decoration: none;
 }
 
+button{
+  cursor: pointer;
+}
+
 /*Navigation Bars*/
 .navbar {
     font-size: 18px;
@@ -277,13 +281,8 @@ a{
   height: auto; 
 }
 
-.cat-item a{
-  color: black;
-  text-decoration: none;
-}
-
-.cat-item a:hover{
-  color: rgb(43, 43, 43);
+.cat-link{
+  text-decoration: underline;
 }
 
 /*Banners*/
