--- a/main.css
+++ b/main.css
@@ -281,7 +281,17 @@ button{
   height: auto; 
 }
 
-.cat-link{
+.category-desc h3 {
+  margin-bottom: 10px; 
+}
+
+.category-desc h4 {
+  text-transform: uppercase;
+  margin-top: 10px; 
+}
+
+
+.category-desc h4{
   text-decoration: underline;
 }
 
