--- a/main.css
+++ b/main.css
@@ -52,6 +52,7 @@ button{
   font-size: 16px;
   padding: 16px 32px;
   border-radius: 5px;
+  width: 180px;
   cursor: pointer;
 }
 
@@ -145,25 +146,17 @@ button{
     text-align: center;
 }
 
-.btn1{
-    background-color: transparent;
-    color: white;
-    border-color: white;
-    border-width: 2px;
-
-    font-size: 18px;
-    text-transform: uppercase;
+.hero-btn{
+  background-color: transparent;
+  color: white;
+  border: 3px solid white;
+  font-weight: bolder;
 }
 
-.btn1 a{
-    color: inherit;
-    text-decoration: none;
-}
-
-.btn1:hover{
-    background-color: black;
-    border: 0;
-    transition: .3s ease;
+.hero-btn:hover{
+  background-color: black;
+  border: 0;
+  transition: .2s ease;
 }
 
 /*About Section*/
@@ -189,6 +182,7 @@ button{
   justify-content: space-evenly;
   align-items: center;
   flex-direction: row;
+  padding: 20px 0;
 }
 
 .product img{
@@ -206,20 +200,18 @@ button{
   color: #919191;
 }
   
-.btn3{
+.view-more-btn{
     background-color: transparent;
     color: black;
     border-color: black;
     border-width: 2px;
-
-    text-transform: uppercase;
 
     display: block;
     margin: 0 auto;
     margin-bottom: 20px;
 }
 
-.btn3:hover{
+.view-more-btn:hover{
     background-color: black;
     border-color: black;
     color: white;
