--- a/main.css
+++ b/main.css
@@ -23,14 +23,14 @@ body{
 h1,h2,h3,h4,h6,p,a{
     font-family: Poppins;
 }
-@media only screen and (max-width: 768px) {
+/* @media only screen and (max-width: 768px) {
     body h1{
         font-size:  16px;
     }
     body p{
         font-size: 14px;
     }
-}
+} */
 
 
 h1{
@@ -78,6 +78,7 @@ button{
     margin-top: 10px;
     margin-left: 20px;
     font-weight: bolder;
+    font-size: 24px;
 }
 
 .nav-links:hover{
@@ -444,6 +445,20 @@ input[type="submit"]:hover{
 }
 
 @media (max-width:479px){ 
+  body h1{
+    font-size: 24px;
+  }
+  
+  main h4,
+  body p{
+    font-size: 16px;
+  }
+
+  main h3{
+    font-size: 18px;
+  }
+  
+
   button{
     font-size: 14px;
     padding: 10px 20px;
