--- a/CSS/featured.css
+++ b/CSS/featured.css
@@ -48,10 +48,6 @@ a{
   text-decoration: none;
 }
 
-a:hover{
-  color: rgb(56, 56, 56);
-}
-
 /*Navigation Bars*/
 .navbar {
   font-size: 18px;
@@ -217,6 +213,7 @@ label {
 }
 
 select{
+  font-size: 14px;
   padding: 5px 0;
   border-radius: 5px;
 }
@@ -238,6 +235,10 @@ select{
 
 .product-info{
   text-align: center;
+}
+
+.product-info a:hover{
+  opacity: 0.8;
 }
 
 .product-info p:nth-child(1){
