--- a/CSS/product_page.css
+++ b/CSS/product_page.css
@@ -121,7 +121,7 @@ a{
 }
 
 .container{
-    padding: 40px 80px;
+    padding: 40px 0;
 }
 
 .cta-btn{
@@ -152,7 +152,7 @@ a{
 }
 
 i {
-    padding-right: 5px;
+    margin-right: 7px;
 }
 
 .product-details h4{
@@ -167,7 +167,6 @@ i {
     text-transform: uppercase;
     color: #919191;
 }
-    
 
 .description p:nth-child(4){
     color: red;
@@ -239,8 +238,8 @@ i {
     opacity: 75%;
 }
 
-.suggested-products{
-    padding: 40px 0;
+.container-2{
+    padding: 20px;
 }
 
 .title-heading{
@@ -250,14 +249,28 @@ i {
 
 .product-grid{
     display: flex; 
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-
-    gap: 50px;
+    flex-direction: row;
+    padding: 20px 0;
 }
 
 .grid-item > img{
     width: 300px;
+    height: 100%;
+}
+
+.item-desc{
+    text-align: center;
+}
+
+.item-desc p:nth-child(1){
+    text-transform: uppercase;
+    color: #919191;
+}
+
+.item-desc a:hover{
+    opacity: 0.8;
 }
 
 /*Footer Section*/
