--- a/CSS/product_page.css
+++ b/CSS/product_page.css
@@ -21,7 +21,7 @@ body{
 }
 
 body p{
-    font-size: 20px;
+    font-size: 18px;
 }
 
 h1{
@@ -385,6 +385,20 @@ input[type="submit"]:hover{
 }
 
 /* Responsive Media Queries*/
+
+@media (min-width: 320px) and (max-width: 479px){
+    body p{
+        font-size: 16px;
+    }
+
+    main h4p{
+    font-size: 16px;
+    }
+
+    main h3{
+        font-size: 18px;
+    }
+}
 @media (max-width: 767px){
     .container{
         padding: 40px 20px;
