--- a/main.css
+++ b/main.css
@@ -147,6 +147,11 @@ button{
     text-align: center;
 }
 
+.text-container p{
+  text-transform: capitalize;
+  font-size: 20px;
+}
+
 .hero-btn{
   background-color: transparent;
   color: white;
@@ -223,11 +228,12 @@ button{
 .card-grid-collections{
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 
   margin: 0 auto;
-  column-gap: 40px;
+ 
+  padding: 20px 0;
 }
 
 .card-info{
@@ -236,7 +242,7 @@ button{
 }
 
 .card-info p{
-  max-width: 300px;
+  max-width: 500px;
 }
 
 .card-info a{
@@ -245,18 +251,14 @@ button{
 }
 
 .card-item img{
-  width: 400px;
+  width: 500px;
 } 
 
 .btn2{
-  padding: 10px 50px;
-
+  width: 200px;
   color:black;
   text-align: left;
-  font-size: 16px;
-
   background-color: transparent;
-
 }
 
 .btn2 a:hover{
