--- a/main.css
+++ b/main.css
@@ -131,33 +131,29 @@ button{
 
 /*Hero Section*/
 #hero{
-    height: 75vh;
-    width: 100%;
+  height: 75vh;
+  width: 100%;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .slideshow-container {
-  height: 75vh;
-  display: flex;
-  overflow: hidden;
+  width: 100%;
+  max-height: 100vh;
   position: relative;
+  margin: auto;
 }
 
 .carousel-slide {
-  flex: 0 0 100%;
-  opacity: 0;
-  transition: opacity 0.5s ease;
-  text-align: center;
+  display: none;
 }
 
 .carousel-slide img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover; 
-  object-position: center center;
+  max-width: 100%;
+  max-height: 100vh; 
+  object-fit: cover;
 }
 
 .carousel-slide:before {
@@ -170,17 +166,23 @@ button{
   background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65));
 }
 
-.active-slide {
-  opacity: 1;
-}
-
-.slide-content{
+.slide-content {
+  color: white;
+  text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: white;
-  text-align: center;
+}
+
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from { opacity: 0.4; } 
+  to { opacity: 1; }
 }
 
 .hero-btn{
