--- a/main.css
+++ b/main.css
@@ -34,7 +34,7 @@ h1,h2,h3,h4,h6,p,a{
 
 
 h1{
-    font-size: 36px;
+  font-size: 36px;
 }
 
 hr{
@@ -167,12 +167,17 @@ button{
 }
 
 .slide-content {
+  text-transform: capitalize;
   color: white;
   text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.slide-content p{
+  font-size: 22px;
 }
 
 .fade {
@@ -188,8 +193,7 @@ button{
 .hero-btn{
   background-color: transparent;
   color: white;
-  border: 3px solid white;
-  font-weight: bolder;
+  border: 2px solid white;
 }
 
 .hero-btn:hover{
