slight tweak to hero button - uppercase and less thick border

--- a/main.css
+++ b/main.css
@@ -193,6 +193,7 @@ button{
 .hero-btn{
   background-color: transparent;
   color: white;
+  text-transform: uppercase;
   border: 2px solid white;
 }
 
