--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -129,107 +129,25 @@ a{
     text-transform: uppercase;
 }
 
-.container{
-    margin: 100px 0px 100px 0px;
-    padding: 0px 40px 0px 40px;
-}
+#hero{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),url("/Assets/Images/contact-hero.jpg");
+    background-position: center;
+    background-attachment: fixed;
+    height: 70vh;
+    width: 100%;
 
-/*Form Section*/
-.contact-box {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 75vh;
 }
-  
-.form {
-    background-color: white;
-    width: 400px;
-    border-radius: 8px;
-    padding: 20px 40px;
-    box-shadow: 0 10px 25px rgba(92, 99, 105, .2);
+
+.text-container{
+    text-align: center;
+    color: white;
 }
-  
-.title {
-    font-size: 50px;
-    margin-bottom: 50px;
-}
-  
-.inputContainer {
-    position: relative;
-    height: 45px;
-    width: 90%;
-    margin-bottom: 17px;
-}
-  
-.input {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    height: 100%;
-    width: 100%;
-    border: 1px solid #DADCE0;
-    border-radius: 7px;
-    font-size: 16px;
-    padding: 0 20px;
-    outline: none;
-    background: none;
-    z-index: 1;
-}
-  
-  
-.label {
-    position: absolute;
-    top: 15px;
-    left: 15px;
-    padding: 0 4px;
-    background-color: white;
-    color: #DADCE0;
-    font-size: 16px;
-    transition: 0.5s;
-    z-index: 0;
-}
-  
-::placeholder {
-    color: transparent;
-}
-  
-.submitBtn {
-    display: block;
-    margin-left: auto;
-    padding: 15px 30px;
-    border: none;
-    background-color: #242424;
-    color: #242424;
-    border-radius: 6px;
-    cursor: pointer;
-    font-size: 16px;
-    margin-top: 30px;
-}
-  
-.submitBtn:hover {
-    background-color: #242424;
-    transform: translateY(-2px);
-}
-.input:focus + .label {
-    top: -7px;
-    left: 3px;
-    z-index: 10;
-    font-size: 14px;
-    font-weight: 600;
-    color: #242424;
-}
-  
-.input:not(:placeholder-shown)+ .label {
-    top: -7px;
-    left: 3px;
-    z-index: 10;
-    font-size: 14px;
-    font-weight: 600;
-}
-  
-.input:focus {
-    border: 2px solid #242424;
+.text-container p{
+    width: 50%;
+    margin: 0 auto;
 }
 
 /*Footer Section*/
