update contact.css - aligned the columns at the same levl at the top

--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -167,14 +167,14 @@ button{
 .contact-area{
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .get-in-touch{
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-top: 20px;
 }
 
 .input-field{
