--- a/main.css
+++ b/main.css
@@ -85,6 +85,54 @@ button{
     font-weight: bolder;
 }
 
+/* Reset default list styles */
+.dropdown-content, .row, .column {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+/* Hide the dropdown content by default */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #ffffff;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 999;
+}
+
+/* Show the dropdown content on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Style the dropdown links and columns */
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 10px;
+}
+
+.column a {
+  display: block;
+  padding: 16px;
+  text-decoration: none;
+  color: black;
+  text-align: left;
+}
+
+.column a:hover {
+  background-color: #ddd;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+
 .nav-links,
 .logo {
     text-decoration: none;
@@ -106,6 +154,7 @@ button{
     color: rgb(0, 0, 0);
     font-size: 24px;
 }
+
 .active {
   display: block;
 }
