added dropdown menu mobile responsiveness to all pages

--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -424,6 +424,48 @@ input[type="submit"]:hover{
     .form-button{
         align-self: center;
     }
+
+     .dropdown-content, .row, .column {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .dropdown-content {
+    width: 100%;
+    top: 70px; 
+    left: 0;
+    display: none;
+    align-items: center;
+  }
+  
+  .dropdown-content .dropbtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 12px 0;
+  }
+
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+  .dropbtn:focus + .dropdown-content {
+    display: flex;
+  }
+  
+  .column {
+    width: 100%; 
+    padding: 10px;
+  }
+  
+  .column a {
+    display: block;
+    font-size: 14px;
+    text-transform: capitalize;
+    text-align: center;
+    padding: 12px 0;
+  }
 }
 
 @media (min-width: 1024px) {
