--- a/CSS/product_page.css
+++ b/CSS/product_page.css
@@ -391,7 +391,7 @@ input[type="submit"]:hover{
         font-size: 16px;
     }
 
-    main h4p{
+    main h4{
     font-size: 16px;
     }
 
@@ -399,6 +399,52 @@ input[type="submit"]:hover{
         font-size: 18px;
     }
 }
+
+@media (min-width: 320px) and (max-width: 1023px){
+    .dropdown-content, .row, .column {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+    }
+      
+    .dropdown-content {
+        width: 100%;
+        top: 70px; 
+        left: 0;
+        display: none;
+        align-items: center;
+    }
+      
+    .dropdown-content .dropbtn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 12px 0;
+    }
+    
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+    
+    .dropbtn:focus + .dropdown-content {
+        display: flex;
+    }
+    
+      
+    .column {
+        width: 100%; 
+        padding: 10px;
+    }
+      
+    .column a {
+        display: block;
+        font-size: 14px;
+        text-transform: capitalize;
+        text-align: center;
+        padding: 12px 0;
+    }
+}
+
 @media (max-width: 767px){
     .container{
         padding: 40px 20px;
