--- a/CSS/dashboard.css
+++ b/CSS/dashboard.css
@@ -42,7 +42,6 @@ h2{
 }
 
 h3{
-    font-size: 24px;
     font-weight: 400;
 }
 
@@ -166,8 +165,39 @@ button{
     padding: 20px;
 }
 
+.separator{
+    width: 100%;
+    height: 1px;
+    color: black;
+}
+
+.user{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+
 .user i{
     font-size: 36px;
+}
+
+.tab{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: row;
+    gap: 5px;
+    cursor: pointer;
+}
+
+.tab h3:hover,
+.tab i:hover{
+    font-weight: 600;
+}
+
+.tab i{
+    font-size: 20px;
 }
 
 .content-grid{
@@ -180,6 +210,7 @@ button{
 .grid-item{
     width: 250px;
     height: auto;
+    text-align: center;
     border: 1px solid #000000;
     border-radius: 5px;
     padding: 15px;
