--- a/CSS/dashboard.css
+++ b/CSS/dashboard.css
@@ -196,7 +196,8 @@ button{
     font-weight: 600;
 }
 
-.tab i{
+.tab i,
+.grid-item i{
     font-size: 20px;
 }
 
@@ -214,6 +215,11 @@ button{
     border: 1px solid #000000;
     border-radius: 5px;
     padding: 15px;
+}
+
+#active-tab > h3,
+.grid-item h3{
+    font-weight: 600;
 }
 
 /*Footer Section*/
