--- a/main.css
+++ b/main.css
@@ -296,6 +296,7 @@ button{
 .btn2{
   width: 200px;
   color:black;
+  border: 2px solid black;
   text-align: left;
   background-color: transparent;
 }
@@ -584,12 +585,17 @@ input[type="submit"]:hover{
   }
 
   .card-info p{
-    max-width: 250px;
+    max-width: 350px;
   }
 
   .card-item > img{
-    width: 250px;
+    width: 350px;
     text-align: center;
+  }
+
+  .btn2{
+    width: 180px;
+    font-size: 16px;
   }
 
   .new-product-grid{
